[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peerglass"
version = "1.0.0"
description = "PeerGlass — Internet Resource Intelligence: RDAP + RPKI + BGP + PeeringDB for all 5 RIRs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "rdap", "whois", "bgp", "rpki", "mcp",
    "rir", "internet-registry", "ip-lookup", "asn",
    "network-intelligence", "peering", "ixp",
    "afrinic", "apnic", "arin", "lacnic", "ripe-ncc"
]

authors = [
    { name = "Duksh Koonjoobeeharry", email = "" }
]

maintainers = [
    { name = "Duksh Koonjoobeeharry", email = "" }
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
peerglass = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Homepage      = "https://github.com/duksh/peerglass"
Repository    = "https://github.com/duksh/peerglass"
Issues        = "https://github.com/duksh/peerglass/issues"
Discussions   = "https://github.com/duksh/peerglass/discussions"
Author        = "https://www.linkedin.com/in/duksh/"
"AFRINIC RDAP" = "https://rdap.afrinic.net/rdap"
"APNIC RDAP"   = "https://rdap.apnic.net"
"ARIN RDAP"    = "https://rdap.arin.net/registry"
"LACNIC RDAP"  = "https://rdap.lacnic.net/rdap"
"RIPE RDAP"    = "https://rdap.db.ripe.net"