[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peerglass"
version = "2.0.0"
description = "PeerGlass — Multi-RIR RDAP MCP Server: RDAP + RPKI + BGP + History + PeeringDB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "whois", "rdap", "rir", "internet", "networking", "rpki", "bgp"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
peerglass = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Repository = "https://github.com/peerglass/peerglass"
"AFRINIC RDAP" = "https://rdap.afrinic.net/rdap"
"APNIC RDAP"   = "https://rdap.apnic.net"
"ARIN RDAP"    = "https://rdap.arin.net/registry"
"LACNIC RDAP"  = "https://rdap.lacnic.net/rdap"
"RIPE RDAP"    = "https://rdap.db.ripe.net"
